--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -17,82 +17,45 @@
 
 <main class="container">
 
-    <div class="row">
-        <div class="card card-margin search-form">
-            <div class="card-body p-0">
-                <form id="card search-form">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="row no-gutters">
-                                <div class="col-lg-3 col-md-3 col-sm-12 p-0">
-                                    <label for="search-type" hidden>검색 유형</label>
-                                    <select class="form-control" id="search-type">
-                                        <option>제목</option>
-                                        <option>id</option>
-                                        <option>닉네임</option>
-                                        <option>해시태그</option>
-                                    </select>
-                                </div>
-                                <div class="col-lg-8 col-md-6 col-sm-12 p-0">
-                                    <label for="search-value" hidden>검색어</label>
-                                    <input type="text" placeholder="검색어..." class="form-control" id="search-value" name="search-value">
-                                </div>
-                                <div class="col-lg-1 col-md-3 col-sm-12 p-0">
-                                    <button type="submit" class="btn btn-base">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search">
-                                            <circle cx="11" cy="11" r="8"></circle>
-                                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-                                        </svg>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
+    <form th:action="@{/posts/}" role="form" method="get" th:object="${posts}">
+        <table class="table text-center">
+            <thead>
+            <tr>
+                <td>번호</td>
+                <td>제목</td>
+                <td>조회수</td>
+                <td>작성자</td>
+                <td>등록일</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="post, status: ${posts.getContent()}">
+                <td th:text="${post.id}"></td>
+                <td>
+                    <a th:href="'/posts/'+${post.id}" th:text="${post.title}"></a>
+                </td>
+                <td th:text="${post.nickname}"></td>
+                <td th:text="${post.hashtag}"></td>
+            </tr>
+            </tbody>
+        </table>
+
+        <br/><br/>
+
+        <div class="form-inline justify-content-center" th:object="${postSearchDto}">
+            <select th:field="*{searchType}" class="form-control" style="width:auto;">
+                <option value="NICKNAME">작성자</option>
+                <option value="TITLE">제목</option>
+                <option value="HASHTAG">해시태그</option>
+            </select>
+            <input th:field="*{searchValue}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
+            <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
         </div>
-    </div>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th class="col-6">제목</th>
-            <th class="col-2">해시태그</th>
-            <th class="col">작성자</th>
-            <th class="col">작성일</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>첫글</td>
-            <td>#1</td>
-            <td>don</td>
-            <td>2022-12-09</td>
-        </tr>
-        <tr>
-            <td>두번째글</td>
-            <td>#2</td>
-            <td>don</td>
-            <td>2022-12-09</td>
-        </tr>
-        <tr>
-            <td>세번째글</td>
-            <td>#1</td>
-            <td>don</td>
-            <td>2022-12-09</td>
-        </tr>
-        </tbody>
-    </table>
+        <!--<a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>-->
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
+    </form>
+
 </main>
 
 <footer th:replace="footer :: footer"></footer>
