--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -52,7 +52,7 @@
             <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
         </div>
 
-        <!--<a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>-->
+        <a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>
 
     </form>
 
