--- a/src/main/resources/templates/posts/form.html
+++ b/src/main/resources/templates/posts/form.html
@@ -51,10 +51,10 @@
             </div>
 
             <div th:if="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
-                <button th:formaction="@{/post/new}" type="submit" class="btn btn-primary">저장</button>
+                <button th:formaction="@{/posts/new}" type="submit" class="btn btn-primary">저장</button>
             </div>
             <div th:unless="${#strings.isEmpty(postFormDto.id)}" style="text-align: center">
-                <button th:formaction="@{'/post/' + ${postFormDto.id} }" type="submit" class="btn btn-primary">수정</button>
+                <button th:formaction="@{'/posts/' + ${postFormDto.id} }" type="submit" class="btn btn-primary">수정</button>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 
