--- a/src/main/resources/templates/members/form.html
+++ b/src/main/resources/templates/members/form.html
@@ -21,9 +21,9 @@
 
     <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
       <div class="form-group">
-        <label th:for="memberId">아이디</label>
-        <input type="memberId" th:field="*{memberId}" class="form-control" placeholder="아이디를 입력해주세요">
-        <p th:if="${#fields.hasErrors('memberId')}" th:errors="*{memberId}" class="fieldError">Incorrect data</p>
+        <label th:for="memberName">아이디</label>
+        <input type="memberName" th:field="*{memberName}" class="form-control" placeholder="아이디를 입력해주세요">
+        <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="fieldError">Incorrect data</p>
       </div>
       <div class="form-group">
         <label th:for="password">비밀번호</label>
