--- a/src/main/resources/templates/members/login.html
+++ b/src/main/resources/templates/members/login.html
@@ -21,8 +21,8 @@
 
         <form role="form" method="post" action="/members/login">
             <div class="form-group">
-                <label th:for="memberId">아이디</label>
-                <input type="memberId" name="memberId" class="form-control" placeholder="아이디를 입력해주세요">
+                <label th:for="memberName">아이디</label>
+                <input type="memberName" name="memberName" class="form-control" placeholder="아이디를 입력해주세요">
             </div>
             <div class="form-group">
                 <label th:for="password">비밀번호</label>
