--- a/src/main/resources/templates/members/form.html
+++ b/src/main/resources/templates/members/form.html
@@ -22,12 +22,12 @@
     <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}">
       <div class="form-group">
         <label th:for="memberName">아이디</label>
-        <input type="memberName" th:field="*{memberName}" class="form-control" placeholder="아이디를 입력해주세요">
+        <input type="text" th:field="*{memberName}" class="form-control" placeholder="아이디를 입력해주세요">
         <p th:if="${#fields.hasErrors('memberName')}" th:errors="*{memberName}" class="fieldError">Incorrect data</p>
       </div>
       <div class="form-group">
         <label th:for="password">비밀번호</label>
-        <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력">
+        <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력해주세요">
         <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
       </div>
       <div class="form-group">
@@ -37,7 +37,7 @@
       </div>
       <div class="form-group">
         <label th:for="nickname">닉네임</label>
-        <input type="nickname" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">
+        <input type="text" th:field="*{nickname}" class="form-control" placeholder="닉네임을 입력해주세요">
         <p th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="fieldError">Incorrect data</p>
       </div>
       <div style="text-align: center">
