--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -55,7 +55,7 @@
 <header th:replace="header :: header"></header>
 
 <main class="container">
-    <input type="hidden" id="boardId" th:id="postId" th:value="${post.id}">
+    <input type="hidden" id="postId" th:id="postId" th:value="${post.id}">
 
     <div class="container">
 
