#23 - fix: 게시글 검색 조건 수정
닉네임이 아닌 아이디(memberName)으로 검색하도록 수정

--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Uno Kim">
+    <meta name="author" content="don">
     <title>게시판 페이지</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -23,7 +23,6 @@
             <tr>
                 <td>번호</td>
                 <td>제목</td>
-                <td>조회수</td>
                 <td>작성자</td>
                 <td>등록일</td>
             </tr>
@@ -34,8 +33,8 @@
                 <td>
                     <a th:href="'/posts/'+${post.id}" th:text="${post.title}"></a>
                 </td>
-                <td th:text="${post.nickname}"></td>
-                <td th:text="${post.hashtag}"></td>
+                <td th:text="${post.memberName}"></td>
+                <td th:text="${post.createdAt}"></td>
             </tr>
             </tbody>
         </table>
@@ -44,7 +43,7 @@
 
         <div class="form-inline justify-content-center" th:object="${postSearchDto}">
             <select th:field="*{searchType}" class="form-control" style="width:auto;">
-                <option value="NICKNAME">작성자</option>
+                <option value="MEMBERNAME">작성자</option>
                 <option value="TITLE">제목</option>
                 <option value="HASHTAG">해시태그</option>
             </select>
