--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -8,10 +8,67 @@
     <title>게시글</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+
+    <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
+    <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
+</head>
 </head>
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
+
+        function saveComment(obj){
+
+            var postId = obj.dataset.id;
+            var commentContent = $("#commentContent").val();
+
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/comments/" + postId;
+
+            var paramData = {
+                content : commentContent
+            };
+
+            var commentFormDto = JSON.stringify(paramData);
+
+            $.ajax({
+                url      : url,
+                type     : "POST",
+                contentType : "application/json",
+                data     : commentFormDto,
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    location.href='/posts/' + [[${postId}]];
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+
+                }
+            });
+        }
+
+        function updateComment(obj){
+        }
+
+        function updateCommentView(obj){
+        }
+
+        function deleteComment(obj){
+        }
 
         function deletePost(obj){
             var postId = obj.dataset.id;
@@ -83,11 +140,29 @@
 
         </div>
 
+        <div class="text-center mt-3">
+
+            <div class="input-group">
+                <textarea class="form-control" aria-label="With textarea" th:id="commentContent"></textarea>
+                <div class="input-group-prepend">
+                    <button type="button" class="btn btn-primary" th:data-id="${post.id}" onclick="saveComment(this)">댓글 작성</button>
+                </div>
+            </div>
+
+        </div>
+
         </br>
 
-
+        <div th:each="comment : ${comments}" class="mb-3">
+            <span class="h5" th:text="${comment.createdBy}"></span><br/>
+            <span th:text="${comment.createdAt}"></span><br/><br/>
+            <span th:text="${comment.content}"></span><br/><br/>
+            <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="updateCommentView(this)">수정</button>
+            <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="deleteComment(this)">삭제</button>
+        </div>
 
     </div>
+
 </main>
 
 <footer th:replace="footer :: footer"></footer>
