--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
         function saveComment(obj){
 
             var postId = obj.dataset.id;
-            var commentContent = $("#commentContent").val();
+            var commentContent = $("#saveCommentContent").val();
 
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
@@ -62,9 +62,47 @@
         }
 
         function updateComment(obj){
-        }
 
-        function updateCommentView(obj){
+            var postId = obj.dataset.id;
+            var commentContent = $("#updateCommentContent").val();
+
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/comments/" + postId;
+
+            var paramData = {
+                content : commentContent
+            };
+
+            var commentFormDto = JSON.stringify(paramData);
+
+            $.ajax({
+                url      : url,
+                type     : "PATCH",
+                contentType : "application/json",
+                data     : commentFormDto,
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    alert('댓글이 수정되었습니다.');
+                    location.href='/posts/' + [[${postId}]];
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+
+                }
+            });
         }
 
         function deleteComment(obj){
@@ -143,7 +181,7 @@
         <div class="text-center mt-3">
 
             <div class="input-group">
-                <textarea class="form-control" aria-label="With textarea" th:id="commentContent"></textarea>
+                <textarea class="form-control" aria-label="With textarea" th:id="saveCommentContent"></textarea>
                 <div class="input-group-prepend">
                     <button type="button" class="btn btn-primary" th:data-id="${post.id}" onclick="saveComment(this)">댓글 작성</button>
                 </div>
@@ -155,10 +193,24 @@
 
         <div th:each="comment : ${comments}" class="mb-3">
             <span class="h5" th:text="${comment.createdBy}"></span><br/>
-            <span th:text="${comment.createdAt}"></span><br/><br/>
+            <span th:text="${comment.createdAt}"></span>
+            <th:block th:if="${comment.createdBy} == ${#authentication.name}">
+                <button type="button" class="btn btn-primary" data-bs-toggle="collapse" th:attr="data-bs-target=|#updateComment_${comment.id}">
+                    수정
+                </button>
+                <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="deleteComment(this)">삭제</button>
+            </th:block>
+            <div class="collapse" th:id="'updateComment_' + ${comment.id}">
+                <div class="input-group">
+                    <textarea class="form-control" aria-label="With textarea" th:id="updateCommentContent"></textarea>
+                    <div class="input-group-prepend">
+                        <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="updateComment(this)">수정</button>
+                    </div>
+                </div>
+            </div>
+            <br/><br/>
             <span th:text="${comment.content}"></span><br/><br/>
-            <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="updateCommentView(this)">수정</button>
-            <button type="button" class="btn btn-primary" th:data-id="${comment.id}" onclick="deleteComment(this)">삭제</button>
+            <hr/>
         </div>
 
     </div>
