--- a/src/main/resources/templates/posts/detail.html
+++ b/src/main/resources/templates/posts/detail.html
@@ -19,7 +19,6 @@
     <script th:inline="javascript">
 
         function saveComment(obj){
-
             var postId = obj.dataset.id;
             var commentContent = $("#saveCommentContent").val();
 
@@ -62,14 +61,13 @@
         }
 
         function updateComment(obj){
-
-            var postId = obj.dataset.id;
+            var commentId = obj.dataset.id;
             var commentContent = $("#updateCommentContent").val();
 
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
-            var url = "/comments/" + postId;
+            var url = "/comments/" + commentId;
 
             var paramData = {
                 content : commentContent
@@ -106,10 +104,42 @@
         }
 
         function deleteComment(obj){
+            var commentId = obj.dataset.id;
+
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/comments/" + commentId;
+
+            $.ajax({
+                url      : url,
+                type     : "DELETE",
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    alert('댓글이 삭제되었습니다.');
+                    location.href='/posts/' + [[${postId}]];
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+
+                }
+            });
         }
 
         function deletePost(obj){
             var postId = obj.dataset.id;
+
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
