#31 - 페이지 번호 클릭 시 오류 수정

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -14,12 +14,12 @@
         });
 
         function page(page){
-            var searchBy = $("#searchBy").val();
-            var searchQuery = $("#searchQuery").val();
+            var searchType = $("#searchType").val();
+            var searchValue = $("#searchValue").val();
 
-            location.href="/boards/" + page
-            + "?searchBy=" + searchBy
-            + "&searchQuery=" + searchQuery;
+            location.href="/posts" + "?page=" + page
+            + "&searchType=" + searchType
+            + "&searchValue=" + searchValue;
         }
 
         $(document).ready(function(){
