--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -11,7 +11,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <form th:action="@{/posts/}" role="form" method="get" th:object="${posts}">
+                    <form th:action="@{/posts}" role="form" method="get" th:object="${posts}">
                         <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                             <thead>
                             <tr>
