#31 - 게시글 등록 화면 해시태그 placeholder 수정
#xxx 형식으로 입력하도록 설명 추가

--- a/src/main/resources/templates/posts/form.html
+++ b/src/main/resources/templates/posts/form.html
@@ -35,7 +35,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text">해시태그</span>
                             </div>
-                            <input type="text" th:field="*{hashtag}" class="form-control" placeholder="해시태그를 입력해주세요">
+                            <input type="text" th:field="*{hashtag}" class="form-control" placeholder="해시태그를 입력해주세요 ex) #xxx">
                         </div>
 
                         <br/>
