#35 - 회사 등록 화면 생성

--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -25,6 +25,13 @@
             </a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/companies/new}">
+                <i class="fas fa-fw fa-table"></i>
+                <span>회사 등록</span>
+            </a>
+        </li>
+
     </ul>
 
 </th:block>
