--- a/src/main/resources/templates/members/profile.html
+++ b/src/main/resources/templates/members/profile.html
@@ -24,6 +24,7 @@
                             <span class="input-group-text">이메일</span>
                         </div>
                         <div class="h4 form-control" th:text="${member.email}"></div>
+                        <a th:href="@{/members/profile/email}" class="btn btn-primary">이메일 변경</a>
                     </div>
 
                     <div class="input-group">
@@ -31,6 +32,7 @@
                             <span class="input-group-text">닉네임</span>
                         </div>
                         <div class="h4 form-control" th:text="${member.nickname}"></div>
+                        <a th:href="@{/members/profile/nickname}" class="btn btn-primary">닉네임 변경</a>
                     </div>
 
                     <div class="input-group">
@@ -50,7 +52,7 @@
 
                     <br/>
                     <div style="text-align: center">
-                        <a th:href="@{/members/profile/password}" class="btn btn-primary">수정</a>
+                        <a th:href="@{/members/profile/password}" class="btn btn-primary">비밀번호 변경</a>
                     </div>
 
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
