--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -39,17 +39,17 @@
                             <ul class="pagination justify-content-center">
 
                                 <li class="page-item" th:classappend="${posts.first}?'disabled'">
-                                    <a th:onclick="'javascript:page(' + ${posts.number - 1} + ')'" aria-label='Previous' class="page-link">
+                                    <a th:onclick="'javascript:postPage(' + ${posts.number - 1} + ')'" aria-label='Previous' class="page-link">
                                         <span aria-hidden='true'>Previous</span>
                                     </a>
                                 </li>
 
                                 <li class="page-item" th:each="page: ${#numbers.sequence(start, end)}" th:classappend="${posts.number eq page-1}?'active':''">
-                                    <a th:onclick="'javascript:page(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
+                                    <a th:onclick="'javascript:postPage(' + ${page - 1} + ')'" th:inline="text" class="page-link">[[${page}]]</a>
                                 </li>
 
                                 <li class="page-item" th:classappend="${posts.last}?'disabled'">
-                                    <a th:onclick="'javascript:page(' + ${posts.number + 1} + ')'" aria-label='Next' class="page-link">
+                                    <a th:onclick="'javascript:postPage(' + ${posts.number + 1} + ')'" aria-label='Next' class="page-link">
                                         <span aria-hidden='true'>Next</span>
                                     </a>
                                 </li>
@@ -66,7 +66,7 @@
                                 <option value="HASHTAG">해시태그</option>
                             </select>
                             <input th:field="*{searchValue}" type="text" class="form-control" placeholder="검색어를 입력해주세요">
-                            <button id="searchBtn" type="submit" class="btn btn-primary">검색</button>
+                            <button id="PostSearchBtn" type="submit" class="btn btn-primary">검색</button>
                         </div>
 
                         <a th:href="@{/posts/new}" class="btn btn-primary">글작성</a>
