#39 - 회사와 회원을 연동하기 위한 회사 리스트 기능 구현
회원은 마이페이지에서 회사를 연동할 수 있다.
회사명 또는 대표명으로 회사를 검색해 연동할 회사를 선택하면 메일 인증 페이지로 이동한다.

--- a/src/main/resources/templates/members/profile.html
+++ b/src/main/resources/templates/members/profile.html
@@ -48,6 +48,7 @@
                         </div>
                         <div th:if="not ${#strings.isEmpty(member.company)}" class="h4 form-control" th:text="${member.company.companyName}"></div>
                         <div th:if="${#strings.isEmpty(member.company)}" class="h4 form-control">없음</div>
+                        <a th:href="@{/companies}" class="btn btn-primary">연동</a>
                     </div>
 
                     <br/>
