--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -195,6 +195,47 @@
                 }
             });
         }
+
+        function mail(obj){
+            var companyEmail = obj.dataset.id;
+
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/mail/mailConfirm";
+
+            var paramData = {
+                email : companyEmail
+            };
+
+            var email = JSON.stringify(companyEmail);
+
+            $.ajax({
+                url      : url,
+                type     : "POST",
+                contentType : "application/json",
+                data     : email,
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    location.href = '/companies';
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        $("#mailNumber").val(jqXHR.responseText);
+                    }
+
+                }
+            });
+        }
     </script>
 
 </th:block>
