#41 - 관리자 정보 리스트 구현
SUPERADMIN인 경우 관리자들의 정보를 조회할 수 있는 기능 구현

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -35,6 +35,10 @@
             + "&searchValue=" + searchValue;
         }
 
+        function adminPage(page){
+            location.href="/superadmins" + "?page=" + page;
+        }
+
         $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
             if(errorMessage != null){
