--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -36,6 +36,15 @@
             </li>
         </div>
 
+        <div sec:authorize="hasRole('ROLE_SUPERADMIN')">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/superadmins/admins}">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>관리자 리스트</span>
+                </a>
+            </li>
+        </div>
+
         <li class="nav-item">
             <a class="nav-link" th:href="@{/posts}">
                 <i class="fas fa-fw fa-table"></i>
