#41 - 회원 정보 리스트 구현 (SUPERADMIN 기준)
SUPERADMIN인 경우 회원들의 정보를 조회할 수 있는 기능 구현

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -36,7 +36,11 @@
         }
 
         function adminPage(page){
-            location.href="/superadmins" + "?page=" + page;
+            location.href="/superadmins/admins" + "?page=" + page;
+        }
+
+        function memberPage(page){
+            location.href="/superadmins/members" + "?page=" + page;
         }
 
         $(document).ready(function(){
