#41 - 회사 정보 리스트 구현 (SUPERADMIN 기준)
SUPERADMIN인 경우 회원들의 정보를 조회할 수 있는 기능 구현

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -43,6 +43,10 @@
             location.href="/superadmins/members" + "?page=" + page;
         }
 
+        function companySuperPagePage(page){
+            location.href="/superadmins/companies" + "?page=" + page;
+        }
+
         $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
             if(errorMessage != null){
