--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -38,6 +38,15 @@
 
         <div sec:authorize="hasRole('ROLE_SUPERADMIN')">
             <li class="nav-item">
+                <a class="nav-link" th:href="@{/superadmins/companies}">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>회사 리스트</span>
+                </a>
+            </li>
+        </div>
+
+        <div sec:authorize="hasRole('ROLE_SUPERADMIN')">
+            <li class="nav-item">
                 <a class="nav-link" th:href="@{/superadmins/admins}">
                     <i class="fas fa-fw fa-table"></i>
                     <span>관리자 리스트</span>
