#41 - 관리자 정보 리스트 구현 (ADMIN 기준)
ADMIN인 경우 관리자들의 정보를 조회할 수 있는 기능 구현

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -39,6 +39,10 @@
             location.href="/superadmins/admins" + "?page=" + page;
         }
 
+        function adminAdminPage(page){
+            location.href="/admins" + "?page=" + page;
+        }
+
         function memberPage(page){
             location.href="/superadmins/members" + "?page=" + page;
         }
