--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -54,6 +54,15 @@
             </li>
         </div>
 
+        <div sec:authorize="hasRole('ROLE_ADMIN')">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admins}">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>관리자 리스트</span>
+                </a>
+            </li>
+        </div>
+
         <div sec:authorize="hasRole('ROLE_SUPERADMIN')">
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/superadmins/members}">
