#41 - 회사 정보 리스트 구현 (ADMIN 기준)
ADMIN인 경우 회원들의 정보를 조회할 수 있는 기능 구현

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -51,8 +51,12 @@
             location.href="/admins/members" + "?page=" + page;
         }
 
-        function companySuperPagePage(page){
+        function companySuperAdminPage(page){
             location.href="/superadmins/companies" + "?page=" + page;
+        }
+
+        function companyAdminPage(page){
+            location.href="/admins/companies" + "?page=" + page;
         }
 
         $(document).ready(function(){
