#43 - 회사 상세 정보 구현 (ADMIN)
관리자 권한을 가진 아이디의 경우 회사 상세 정보를 볼 수 있는 기능 구현

--- a/src/main/resources/templates/admins/companyList.html
+++ b/src/main/resources/templates/admins/companyList.html
@@ -20,7 +20,9 @@
                         </thead>
                         <tbody>
                         <tr th:each="company : ${companies}">
-                            <td th:text="${company.companyName}"></td>
+                            <td>
+                                <a th:href="'/companies/'+${company.id}" th:text="${company.companyName}"></a>
+                            </td>
                             <td th:text="${company.chiefName}"></td>
                         </tr>
                         </tbody>
