--- a/src/main/resources/templates/admins/companyList.html
+++ b/src/main/resources/templates/admins/companyList.html
@@ -21,7 +21,7 @@
                         <tbody>
                         <tr th:each="company : ${companies}">
                             <td>
-                                <a th:href="'/companies/'+${company.id}" th:text="${company.companyName}"></a>
+                                <a th:href="'/admins/'+${company.id}" th:text="${company.companyName}"></a>
                             </td>
                             <td th:text="${company.chiefName}"></td>
                         </tr>
