--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html"
       layout:decorate="~{/layout/layout}">
 
 <th:block layout:fragment="content">
@@ -50,6 +50,37 @@
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                 </div>
             </div>
+
+            <div class="card-body">
+                <div class="table-responsive">
+
+                    <a th:href="'/admins/'+${company.id}+'/newOrganization'" class="btn btn-primary">부서 등록</a>
+
+                    <br/><br/>
+
+                    <div class="form-inline" th:object="${organizationSearchDto}">
+                        <select th:field="*{searchType}" class="form-control" style="width:auto;">
+                            <option value="ORGANIZATIONNAME">부서명</option>
+                        </select>
+                        <input th:field="*{searchValue}" type="text" class="form-control" placeholder="부서명을 입력해주세요">
+                        <button id="OrgSearchBtn" type="submit" class="btn btn-primary">검색</button>
+                    </div>
+
+                    <br/><br/>
+
+                    <div th:each="organization : ${organizations}" class="mb-3">
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">부서명</span>
+                            </div>
+                            <div class="h4 form-control" th:text="${organization.organizationName}"></div>
+                        </div>
+                    </div>
+
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                </div>
+            </div>
+
         </div>
     </div>
 </th:block>
