--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -12,6 +12,8 @@
             <div class="card-body">
                 <div class="table-responsive">
 
+                    <input type="hidden" th:field="${company.id}" th:id="companyId">
+
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">사업자등록번호</span>
@@ -74,6 +76,12 @@
                                 <span class="input-group-text">부서명</span>
                             </div>
                             <div class="h4 form-control" th:text="${organization.organizationName}"></div>
+                        </div>
+                        <div class="input-group text-center mt-3">
+                            <input type="text" class="form-control" aria-label="With textarea" th:id="savePositionInput">
+                            <div class="input-group-prepend">
+                                <button type="button" class="btn btn-primary" th:data-id="${organization.id}" onclick="savePosition(this)">직책 등록</button>
+                            </div>
                         </div>
                     </div>
 
