--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -77,12 +77,28 @@
                             </div>
                             <div class="h4 form-control" th:text="${organization.organizationName}"></div>
                         </div>
-                        <div class="input-group text-center mt-3">
-                            <input type="text" class="form-control" aria-label="With textarea" th:id="savePositionInput">
-                            <div class="input-group-prepend">
-                                <button type="button" class="btn btn-primary" th:data-id="${organization.id}" onclick="savePosition(this)">직책 등록</button>
+
+                        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" th:attr="data-bs-target=|#savePosition_${organization.id}">
+                            직책 등록
+                        </button>
+                        <div class="collapse" th:id="'savePosition_' + ${organization.id}">
+                            <div class="input-group">
+                                <input type="text" class="form-control" aria-label="With textarea" th:id="'savePositionInput_' + ${organization.id}">
+                                <div class="input-group-prepend">
+                                    <button type="button" class="btn btn-primary" th:data-id="${organization.id}" onclick="savePosition(this)">등록</button>
+                                </div>
                             </div>
                         </div>
+
+                        <div th:each="position : ${organization.positionListDtos}" class="mb-3">
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">직책명</span>
+                                </div>
+                                <div class="h4 form-control" th:text="${position.positionName}"></div>
+                            </div>
+                        </div>
+
                     </div>
 
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
