#43 - 직책 조회 기능 구현 (ADMIN)
ADMIN 권한을 가진 아이디의 경우 회원의 회사에 저장된 직책을 조회할 수 있는 기능 구현
부서를 조회할 때 부서와 연관된 직책들을 조회해 부서와 연결하고 응답으로 보냄

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -263,7 +263,7 @@
 
         function savePosition(obj){
             var organizationId = obj.dataset.id;
-            var positionName = $("#savePositionInput").val();
+            var positionName = $("#savePositionInput_" + organizationId).val();
             var companyId = $("#companyId").val();
 
             var token = $("meta[name='_csrf']").attr("content");
