#43 - 부서 검색 가능하도록 타임리프 수정 (ADMIN)
검색할 부서를 입력하고 클릭 시 입력한 내용을 포함하는 부서를 응답한다.

--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -59,14 +59,15 @@
                     <a th:href="'/admins/'+${company.id}+'/newOrganization'" class="btn btn-primary">부서 등록</a>
 
                     <br/><br/>
-
-                    <div class="form-inline" th:object="${organizationSearchDto}">
-                        <select th:field="*{searchType}" class="form-control" style="width:auto;">
-                            <option value="ORGANIZATIONNAME">부서명</option>
-                        </select>
-                        <input th:field="*{searchValue}" type="text" class="form-control" placeholder="부서명을 입력해주세요">
-                        <button id="OrgSearchBtn" type="submit" class="btn btn-primary">검색</button>
-                    </div>
+                    <form th:action="@{/admins/{companyId}(companyId=${company.id})}" role="form" method="get" th:object="${organizationSearchDto}">
+                        <div class="form-inline">
+                            <select th:field="*{searchType}" class="form-control" style="width:auto;">
+                                <option value="ORGANIZATIONNAME">부서명</option>
+                            </select>
+                            <input th:field="*{searchValue}" type="text" class="form-control" placeholder="부서명을 입력해주세요">
+                            <button id="OrgSearchBtn" type="submit" class="btn btn-primary">검색</button>
+                        </div>
+                    </form>
 
                     <br/><br/>
 
