#43 - 직책 조회할 때 회원도 같이 조회하는 기능 구현 (ADMIN)
ADMIN 권한을 가진 아이디의 경우 회원의 회사를 조회할 때 직책에 해당하는 회원들을 조회할 수 있는 기능을 구현했다.

--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -97,6 +97,14 @@
                                     <span class="input-group-text">직책명</span>
                                 </div>
                                 <div class="h4 form-control" th:text="${position.positionName}"></div>
+                                <div th:each="member : ${position.positionMemberListDtos}" class="mb-3">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text">성명</span>
+                                        </div>
+                                        <div class="h4 form-control" th:text="${member.memberName}"></div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
