--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -62,7 +62,7 @@
                     <form th:action="@{/admins/{companyId}(companyId=${company.id})}" role="form" method="get" th:object="${organizationSearchDto}">
                         <div class="form-inline">
                             <select th:field="*{searchType}" class="form-control" style="width:auto;">
-                                <option value="ORGANIZATIONNAME">부서명</option>
+                                <option th:value="ORGANIZATIONNAME">부서명</option>
                             </select>
                             <input th:field="*{searchValue}" type="text" class="form-control" placeholder="부서명을 입력해주세요">
                             <button id="OrgSearchBtn" type="submit" class="btn btn-primary">검색</button>
@@ -105,6 +105,7 @@
                                         <div class="h4 form-control" th:text="${member.memberName}"></div>
                                     </div>
                                 </div>
+                                <a th:href="'/admins/'+${company.id}+'/'+${organization.id}+'/'+${position.id}" class="btn btn-primary">사원 관리</a>
                             </div>
                         </div>
 
