#45 - fix: 게시글 검색 오류 수정
자바스크립트 함수명 오타 수정

--- a/src/main/resources/templates/layout/fragments/script.html
+++ b/src/main/resources/templates/layout/fragments/script.html
@@ -9,7 +9,7 @@
         $(document).ready(function(){
             $("#PostSearchBtn").on("click",function(e) {
                 e.preventDefault();
-                PostPage(0);
+                postPage(0);
             });
             $("#CompanySearchBtn").on("click",function(e) {
                 e.preventDefault();
