--- a/src/main/resources/templates/admins/companyDetail.html
+++ b/src/main/resources/templates/admins/companyDetail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html"
-      layout:decorate="~{/layout/layout}">
+      layout:decorate="~{layout/layout}">
 
 <th:block layout:fragment="content">
     <div class="container-fluid">
